--- a/MuseumQuest-main/pubspec.yaml
+++ b/MuseumQuest-main/pubspec.yaml
@@ -34,7 +34,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_blue:
+  get:
+  permission_handler:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,6 +45,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  intl: ^0.17.0
+  sqflite: ^2.1.0+1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
